# advent-of-code-2025

./: .env.example  README.md  analyze_day11.py  debug_columns.py  debug_part2.py  debug_test.py  pyproject.toml  test_example.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
archive/: constitution-input.md
cli/: __init__.py  __main__.py  aoc_client.py  meta_runner.py  scaffold.py  specify_integration.py  utils.py
day-01/: README.md  debug_part2.py  description.md  solution.py  test_solution.py
day-01/visualization/: audio-manager.js  dial-animation.js  index.html  styles.css  ui-controls.js
day-02/: README.md  description.md  solution.py  test_solution.py
day-03/: README.md  description.md  solution.py  test_input.txt  test_solution.py
day-03/day-03/: description.md
day-04/: README.md  debug.py  description.md  solution.py  test_solution.py
day-05/: README.md  description.md  solution.py  test_solution.py
day-06/: IMPLEMENTATION_SUMMARY.md  README.md  description.md  parser.py  solution.py  solution_part2.py  test_multiple_problems.py  test_parser.py  test_problem_groups.py  test_quickstart_validation.py  test_solution.py  test_solution_part2.py  test_worksheet.py  utils.py
day-07/: README.md  debug_trace.py  description.md  solution.py  solution_part2.py  test_debug.py  test_solution.py  test_solution_part2.py
day-08/: README.md  debug_connections.py  description.md  solution.py  solution_part2.py  test_solution.py  test_solution_part2.py
day-09/: README.md  __init__.py  description.md  solution.py  solution_part2.py  test_solution.py  test_solution_part2.py
day-10/: PART2_SUMMARY.md  README.md  debug_description.py  debug_machine0.py  description.md  solution.py  solution_part2.py  test_solution.py  test_solution_part2.py
day-11/: README.md  __init__.py  description.md  solution.py  test_solution.py
specs/001-day-04-part-2/: data-model.md  (+3 more)
tests/: test_aoc_client.py  test_backoff.py  test_cli_help.py  test_scaffold.py  test_utils.py
(+203 files in other folders)
