[project]
name = "aoc-2025"
version = "0.1.0"
description = "Advent of Code 2025 Meta Runner & CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "beautifulsoup4>=4.14.3",
    "html2text>=2025.4.15",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli*"]
exclude = ["tests*", "specs*", "archive*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests", "day-01", "day-02", "day-03", "day-04", "day-05", "day-06", "day-07", "day-08", "day-09"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers --tb=short --import-mode=importlib"